# django-mailersend

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
django_mailersend/: backend.py  message.py
