[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mailersend"
version = "0.0.1"
authors = [
  { name="Digital Valley", email="techteam@digitalvalley.nl" }
]
description = "Django MailerSend makes it easier to send emails in Django apps using the MailerSend API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "django"
]
